@@ -30,5 +30,23 @@ namespace MonkeyWrench.Web.UI {
         /// To modify move field declaration from designer file to code-behind file.
         /// </remarks>
         protected global::System.Web.UI.WebControls.Label lblSchedule;
+        
+        /// <summary>
+        /// cmdExecuteDeletionDirectives control.
+        /// </summary>
+        /// <remarks>
+        /// Auto-generated field.
+        /// To modify move field declaration from designer file to code-behind file.
+        /// </remarks>
+        protected global::System.Web.UI.WebControls.Button cmdExecuteDeletionDirectives;
+        
+        /// <summary>
+        /// lblExecuteDeletionDirectives control.
+        /// </summary>
+        /// <remarks>
+        /// Auto-generated field.
+        /// To modify move field declaration from designer file to code-behind file.
+        /// </remarks>
+        protected global::System.Web.UI.WebControls.Label lblExecuteDeletionDirectives;
     }
 }
