@@ -1,5 +1,9 @@
 2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* WebServices.Generated.cs: Regenerated.
+
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* WebServices.cs: Add the possibility to get a redirect
 	url which doesn't propagate credentials.
 
